# ov-cup

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  city-cup-2022.html  city-cup-2023.html  city-cup-2024.html  city-cup.html  forest-cup-2022.html  forest-cup-2023.html  forest-cup-2024.html  forest-cup-2025.html  forest-cup.html  index.html  kampioen-2022.html  kampioen.html  merge-json.py  overrides.json  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yml
js/: lib.js  lib.jsx
scripts/: categories.txt  merge-json.py  split-result-by-class.py  top-three.py
scss/: ov.js  ov.scss
src/: cli.rs  db.rs  iof.rs  lib.rs  rules_2022.rs  rules_2023.rs  rules_2024.rs  rules_2026.rs  webres.rs
