[package]
name = "ov-cup"
version = "0.1.0"
authors = ["Jeroen Hoekx <jeroen@hoekx.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load"
path = "src/bin/load.rs"

[[bin]]
name = "ranking"
path = "src/bin/ranking.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1", features= ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
