[package]
name = "ov-cup"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Jeroen Hoekx <jeroen@hoekx.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load"
path = "src/bin/load.rs"

[[bin]]
name = "ranking"
path = "src/bin/ranking.rs"

[[bin]]
name = "cup-cgi"
path = "src/bin/cgi.rs"

[dependencies]
cgi = "0.6"
chrono = { version = "0.4", features = ["serde"] }
form_urlencoded = "1"
itertools = "0.10"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1", features= ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
