[package]
name = "ov-cup"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Jeroen Hoekx <jeroen@hoekx.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "load"
path = "src/bin/load.rs"

[[bin]]
name = "ranking"
path = "src/bin/ranking.rs"

[[bin]]
name = "cup-cgi"
path = "src/bin/cgi.rs"

[dependencies]
anyhow = "1"
cgi = "0.6"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
form_urlencoded = "1"
itertools = "0.12"
once_cell = "1"
regex = "1"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.6"
thiserror = "1"
